# ah-connect

./: .gitignore  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: validate.yml
custom_components/ah_connect/: __init__.py  api.py  appie_config.py  auth.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  manifest.json  models.py  sensor.py  services.py  services.yaml
custom_components/ah_connect/translations/: en.json  nl.json
custom_components/ah_shopping/: __init__.py  api.py  auth.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  manifest.json  models.py  sensor.py  services.py  services.yaml  storage.py
custom_components/ah_shopping/translations/: en.json  nl.json
docs/: AH_API_DISCOVERY.md  API_DISCOVERY.md  APPIE_GO_REFERENCE.md  AUTHENTICATION.md  DEVELOPMENT.md  GITHUB_REPOSITORY_SETUP.md  INSTALLATION.md  PROMPT_HA_DASHBOARD_FAVORIETEN.md  ROADMAP.md  SECURITY_AND_LIMITATIONS.md  SERVICES.md  TROUBLESHOOTING.md
examples/: automations.yaml
tests/: __init__.py  conftest.py  test_api.py  test_api_experimental.py  test_appie_config.py  test_auth.py  test_diagnostics.py  test_models.py  test_no_legacy_references.py  test_storage.py
