[project]
name = "ah-shopping"
version = "0.1.0"
description = "Home Assistant custom integration for Albert Heijn (AH Shopping)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
